feat: add device token administration
